Añadido ProductCard y ProductForm

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header class="bg-dark text-white d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
   <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-white text-decoration-none">
     <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-    <span class="fs-4">App Products</span>
+    <span class="fs-4">Simple header</span>
   </a>
   <div class="d-flex align-items-center">
     <form class="w-100 me-3">
@@ -9,15 +9,16 @@
     </form>
     </div>
 </header>
-
+<section class="container mt-5">
+  <app-product-form></app-product-form>
+</section>
 <section class="container mt-5">
   <app-product-list></app-product-list>
-  
 </section>
  
 
 
- <footer class="footer bg-dark text-white justify-content-center py-3 mb-4">
+ <footer class="footer">
   <div class="container">
     <p>
       &copy; 2025 ProductsApp, Inc. | WebApp Desarrollada con Angular 18 | Autor: Sergio Escudero Moreno 
