Añadido FilterProduct y ultimos detalles

--- a/src/app/components/product-card/product-card.component.html
+++ b/src/app/components/product-card/product-card.component.html
@@ -1,15 +1,19 @@
 <div class="container"> 
   
     <div class="row">
-      <div class="col-md-3">            
+      
+      <div class="col-md-4">            
         <img class="rounded mx-auto d-block" src="{{producto.image}}" alt="Generic placeholder image" width="180" height="180">            
       </div>
-      <div class="col-md-9">
-        <h2>{{producto.name}}</h2>
+      <div class="col-md-8">
+        <h5>{{producto.name}}</h5>
         <h6 class="card-title"><strong>Category: </strong> <span>{{producto.category}}</span></h6>
         <h6 class="card-title"><strong>Price: </strong> <span>{{producto.price}} </span></h6>                
         <p>{{producto.description}}</p>
+        <button class="btn btn-danger" (click)="deleteProduct(producto)">Eliminar</button>
       </div>
+      
+    
     </div>  
 
 </div>
