--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,21 @@
-<header class="bg-dark text-white d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-  <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-white text-decoration-none">
-    <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
-    <span class="fs-4">Simple header</span>
-  </a>
-  <div class="d-flex align-items-center">
-    <form class="w-100 me-3">
-      <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
-    </form>
-    </div>
+<header>
+  <div class="container">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/">AppProducts</a>
+      </div>
+    </nav>
+  </div>
 </header>
 <section class="container mt-5">
-  <app-product-form></app-product-form>
+  <div class="row g-2 my-3">
+    <article class="col-md-8">
+      <app-product-form></app-product-form>
+    </article>
+    <article class="col-md-4">
+      <app-product-filter></app-product-filter>
+    </article>
+  </div>
 </section>
 <section class="container mt-5">
   <app-product-list></app-product-list>
